--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,40 +1,72 @@
 body {
-  background-color: rgba(255, 255, 255, 0.448);
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  font-family: 'Roboto', sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #f8f8f8;
+  color: #333;
 }
-.nav_traka{
-  position: relative;
-  left: -50px;
-  top: -40px;
+
+.container {
+  width: 80%;
+  margin: 0 auto;
 }
-a{
-  font-size: 20px;
-  margin-left: 50px;
+
+header {
+  background-color: #0D99FF;
+  color: #fff;
+  padding: 1em 0;
+  text-align: center;
 }
-ul {
+
+nav ul {
   list-style-type: none;
   margin: 0;
-  padding: 0px;
-  overflow: hidden;
-  background-color: #333;
-  position: sticky;
-  height: 200px;
-}
-li {
-  float: left;
-  position: relative;
-  top: 70px;
+  padding: 0;
 }
 
-li a {
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
+nav ul li {
+  display: inline;
+  margin-right: 20px;
+}
+
+nav a {
   text-decoration: none;
+  color: #fff;
+  font-weight: bold;
+  transition: color 0.3s ease;
 }
 
-li a:hover {
-  background-color: #111;
+nav a:hover {
+  color: #0a0901;
+}
+
+section {
+  padding: 40px 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+article {
+  margin-bottom: 40px;
+}
+
+.projekt {
+  background-color: #fff;
+  padding: 20px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  transition: transform 0.3s ease;
+}
+
+.projekt:hover {
+  transform: scale(1.05);
+}
+
+footer {
+  background-color: #0D99FF;
+  color: #fff;
+  padding: 1em 0;
+  text-align: center;
 }
